--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>React</title>
+        <link rel="stylesheet"
+              href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+              integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+              crossorigin="anonymous">
         <script src="https://fb.me/react-with-addons-0.14.3.js"></script>
         <script src="https://fb.me/react-dom-0.14.3.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     </head>
     <body>
-        <script type="text/babel">
-            ReactDOM.render(git status
-                <h1>Olá mundo! React :)</h1>,
-                document.querySelector('body')
-            );
-        </script>
+
+        <div id="app"></div>
+
+        <script type="text/babel" src="main.js"></script>
     </body>
 </html>
