--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     </head>
     <body>
 
-        <div id="app"></div>
+        <div id="nav"></div>
+        <div id="title"></div>
 
         <script type="text/babel" src="main.js"></script>
     </body>
