--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
               crossorigin="anonymous">
         <script src="https://fb.me/react-with-addons-0.14.3.js"></script>
         <script src="https://fb.me/react-dom-0.14.3.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     </head>
     <body>
 
         <div id="nav"></div>
         <div id="title"></div>
 
-        <script type="text/babel" src="main.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
