--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         <div id="nav"></div>
         <div id="title"></div>
+        <div id="button"></div>
 
         <script src="js/main.js"></script>
     </body>
