Criação de composição
Foi criado um novo componente exemplificando o funcionamento de composição, colocando todos os componentes já criados dentro desse componente.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     </head>
     <body>
 
-        <div id="nav"></div>
-        <div id="title"></div>
-        <div id="button"></div>
+        <div id="page"></div>
 
         <script src="js/main.js"></script>
     </body>
