--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         <div id="page"></div>
 
+        <script src="js/components.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
